# PicoDualCoreExample

./: CMakeLists.txt  DualCoreExample.c  README.md  launch.json
